<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".casualMenuActivity">

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToEasyMode"
        android:text="@string/easy"
        app:layout_constraintBottom_toTopOf="@+id/btnMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToBasicGame"
        android:text="@string/medium"
        app:layout_constraintBottom_toTopOf="@+id/btnHard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEasy" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMedium" />
</androidx.constraintlayout.widget.ConstraintLayout>