<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".basicGameActivity">

    <Button
        android:id="@+id/btnNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="Button"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNum3"
        app:layout_constraintEnd_toStartOf="@+id/btnNum2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="Button"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btnNum4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnNum1" />

    <Button
        android:id="@+id/btnNum3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="Button"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSub"
        app:layout_constraintEnd_toStartOf="@+id/btnNum4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNum4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="Button"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnNum3" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/plus"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSub"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/minus"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnMult"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/times"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDiv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSub" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/Divide"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMult" />

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:text="@string/z19"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/txtOp1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtOp1"
        android:layout_width="25sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:text="@string/Divide"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/txtNum2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtNum1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:text="@string/z19"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/txtOp2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtOp1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtOp2"
        android:layout_width="25sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:text="@string/Divide"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/txtNum3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtNum2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNum3"
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:text="@string/z19"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/txtOp3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtOp2"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtOp3"
        android:layout_width="30sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:text="@string/Divide"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/txtNum4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtNum3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNum4"
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:text="@string/z19"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtOp3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/equals"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOp2" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/z19"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEquals" />

</androidx.constraintlayout.widget.ConstraintLayout>